--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,12 +24,14 @@
             <!-- Main Content -->
             <v-main>
                 <v-container>
+                    <!-- inputs the page here -->
                     <component :is="'{{ componentName }}'"></component>
                 </v-container>
             </v-main>
         </v-app>
     </div>
 
+    <!-- still using old vue and vuetify. can update if needed -->
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <!-- Vuetify JS -->
